# excepciones-ejercicio-israel-lara

./: CMakeLists.txt  README.md  bandera_error.cpp  bandera_error.h  main.cpp  main.h
parte1/: bandera_error.cpp  bandera_error.h
parte2/: ejercicio2.cpp  ejercicio2.h
parte3/: ejercicio3.cpp  ejercicio3.h
parte4/: ejercicio4.cpp  ejercicio4.h
parte5/: ejercicio5.cpp  ejercicio5.h
parte6/: ejercicio6.cpp  ejercicio6.h
parte7/: ejercicio7.cpp  ejercicio7.h
